[project]
name = "fake-image-detection"
version = "0.0.1"
description = "Vision transformer fine tuned to classify real vs diffusion-model-generated images."
readme = "README.md"
authors = [
    { name = "asha-lily" },
]
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest==9.0.1",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fake_image_detection"]